--- a/css/timeline.css
+++ b/css/timeline.css
@@ -62,6 +62,7 @@ body {
   display: block;
   width: 100%;
   height: 100%;
+  cursor: none;
 }
 .tl-container .tl-block .tl-bd .tl-spine a i {
   display: inline-block;
@@ -74,6 +75,9 @@ body {
   height: 21px;
   background: transparent url(../img/icons.png) no-repeat -132px -31px;
   visibility: hidden;
+}
+.tl-container .tl-block .tl-bd .tl-spine a:hover i {
+  visibility: visible;
 }
 .tl-container .tl-block .tl-bd .tl-unit {
   position: relative;
@@ -137,9 +141,6 @@ body {
 .tl-container .tl-block .tl-bd .tl-unit .tl-unit-custom .pic {
   text-align: center;
 }
-.tl-container .tl-block .tl-bd .tl-unit .tl-unit-custom .pic img {
-  max-width: 100%;
-}
 .tl-container .tl-block .tl-bd .tl-unit .tl-unit-custom .meta {
   padding: 0 10px;
   height: 24px;
@@ -158,58 +159,81 @@ body {
   font-family: "Arial";
   margin: 0 4px;
 }
-.tl-container .tl-block .tl-bd .tl-unit-r,
-.tl-container .tl-block .tl-bd .tl-unit-l {
+.tl-container .tl-block .tl-bd .tl-unit-2,
+.tl-container .tl-block .tl-bd .tl-unit-1 {
   float: left;
 }
-.tl-container .tl-block .tl-bd .tl-unit-r .tl-unit-arrow,
-.tl-container .tl-block .tl-bd .tl-unit-l .tl-unit-arrow,
-.tl-container .tl-block .tl-bd .tl-unit-r .tl-unit-bullet,
-.tl-container .tl-block .tl-bd .tl-unit-l .tl-unit-bullet {
+.tl-container .tl-block .tl-bd .tl-unit-2 .tl-unit-arrow,
+.tl-container .tl-block .tl-bd .tl-unit-1 .tl-unit-arrow,
+.tl-container .tl-block .tl-bd .tl-unit-2 .tl-unit-bullet,
+.tl-container .tl-block .tl-bd .tl-unit-1 .tl-unit-bullet {
   visibility: visible;
 }
-.tl-container .tl-block .tl-bd .tl-unit-l {
+.tl-container .tl-block .tl-bd .tl-unit-1 {
   width: 385px;
 }
-.tl-container .tl-block .tl-bd .tl-unit-l .tl-unit-arrow,
-.tl-container .tl-block .tl-bd .tl-unit-l .tl-unit-arrow i {
+.tl-container .tl-block .tl-bd .tl-unit-1 .tl-unit-arrow,
+.tl-container .tl-block .tl-bd .tl-unit-1 .tl-unit-arrow i {
   border-right: none;
   border-left: 6px solid #97a4c2;
 }
-.tl-container .tl-block .tl-bd .tl-unit-l .tl-unit-arrow {
+.tl-container .tl-block .tl-bd .tl-unit-1 .tl-unit-arrow {
   right: -6px;
   top: 20px;
 }
-.tl-container .tl-block .tl-bd .tl-unit-l .tl-unit-arrow i {
+.tl-container .tl-block .tl-bd .tl-unit-1 .tl-unit-arrow i {
   left: -7px;
   border-left-color: white;
 }
-.tl-container .tl-block .tl-bd .tl-unit-l .tl-unit-bullet {
+.tl-container .tl-block .tl-bd .tl-unit-1 .tl-unit-bullet {
   top: 20px;
   right: -19.5px;
 }
-.tl-container .tl-block .tl-bd .tl-unit-r {
+.tl-container .tl-block .tl-bd .tl-unit-2 {
+  float: right;
   width: 385px;
 }
-.tl-container .tl-block .tl-bd .tl-unit-r .tl-unit-arrow,
-.tl-container .tl-block .tl-bd .tl-unit-r .tl-unit-arrow i {
+.tl-container .tl-block .tl-bd .tl-unit-2 .tl-unit-arrow,
+.tl-container .tl-block .tl-bd .tl-unit-2 .tl-unit-arrow i {
   border-left: none;
   border-right: 6px solid #97a4c2;
 }
-.tl-container .tl-block .tl-bd .tl-unit-r .tl-unit-arrow {
+.tl-container .tl-block .tl-bd .tl-unit-2 .tl-unit-arrow {
   left: -6px;
-  top: 40px;
+  top: 60px;
 }
-.tl-container .tl-block .tl-bd .tl-unit-r .tl-unit-arrow i {
+.tl-container .tl-block .tl-bd .tl-unit-2 .tl-unit-arrow i {
   left: 1px;
   border-right-color: white;
 }
-.tl-container .tl-block .tl-bd .tl-unit-r .tl-unit-bullet {
-  top: 40px;
+.tl-container .tl-block .tl-bd .tl-unit-2 .tl-unit-bullet {
+  top: 60px;
   left: -19.5px;
 }
 .tl-container .tl-block .tl-ft.tl-loading {
   padding-bottom: 10px;
   height: 20px;
   background: transparent url(../img/loading.gif) no-repeat center center;
+}
+.tl-navigator {
+  position: fixed;
+  top: 6%;
+  right: 20%;
+  margin: 0;
+  list-style: none;
+}
+.tl-navigator li {
+  list-style: none;
+  line-height: 1.28;
+}
+.tl-navigator li a {
+  color: #94A0C1;
+  text-decoration: none;
+  border-left: 5px solid #C8D1E2;
+  padding-left: 20px;
+}
+.tl-navigator li.selected a {
+  color: #627AAD;
+  font-weight: bold;
+  border-left-color: #627AAD;
 }
