--- a/less/timeline.less
+++ b/less/timeline.less
@@ -8,7 +8,7 @@
 @ArrowSize: 6px;
 @BulletSize: 9px;
 @LeftArrowTop: 20px;
-@RightArrowTop: 40px;
+@RightArrowTop: 60px;
 @BlockPadding: 10px;
 
 .inline-block() {
@@ -52,6 +52,7 @@ body {
   width: @ContainerWidth;
   margin: 0 auto;
 
+
   ul, ol, li, p {
     margin: 0;
     list-style: none;
@@ -92,6 +93,7 @@ body {
           display: block;
           width: 100%;
           height: 100%;
+          cursor: none;
 
           i {
             .inline-block();
@@ -102,6 +104,10 @@ body {
             height: 21px;
             background: transparent url(../img/icons.png) no-repeat -132px -31px;
             visibility: hidden;
+          }
+
+          &:hover i {
+            visibility: visible;
           }
         }
       }
@@ -159,10 +165,6 @@ body {
 
           .pic {
             text-align: center;
-
-            img {
-              max-width: 100%;
-            }
           }
 
           .desc {
@@ -187,13 +189,13 @@ body {
           }
         }
       }
-      .tl-unit-r, .tl-unit-l {
+      .tl-unit-2, .tl-unit-1 {
         float: left;
         .tl-unit-arrow, .tl-unit-bullet {
           visibility: visible;
         }
       }
-      .tl-unit-l {
+      .tl-unit-1 {
         width: @ContainerWidth/2 - @UnitPadding/2;
         .tl-unit-arrow, .tl-unit-arrow i {
           border-right: none;
@@ -214,7 +216,8 @@ body {
           right: -(@UnitPadding/2+@BulletSize/2);
         }
       }
-      .tl-unit-r {
+      .tl-unit-2 {
+        float: right;
         width: @ContainerWidth/2 - @UnitPadding/2;
 
         .tl-unit-arrow, .tl-unit-arrow i {
@@ -245,6 +248,33 @@ body {
         padding-bottom: @BlockPadding;
         height: 20px;
         background: transparent url(../img/loading.gif) no-repeat center center;
+      }
+    }
+  }
+}
+
+.tl-navigator {
+  position: fixed;
+  top: 6%;
+  right: 20%;
+  margin: 0;
+  list-style: none;
+
+  li {
+    list-style: none;
+    line-height: 1.28;
+
+    a {
+      color: #94A0C1;
+      text-decoration: none;
+      border-left: 5px solid #C8D1E2;
+      padding-left: 20px;
+    }
+    &.selected {
+      a {
+        color: #627AAD;
+        font-weight: bold;
+        border-left-color: #627AAD;
       }
     }
   }
